--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,43 +1,167 @@
-<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
-<header id="header">
-    <div class="container">
-
-      <div id="logo" class="pull-left">
-        <h1><a href="#intro" class="scrollto">THAI DCR</a></h1>
-
+<body>
+  <header id="header">
+  <div class="container">
+        <div id="logo" class="pull-left">
+          <h1><a href="#intro" class="scrollto">THAI DCR</a></h1>
+        </div>
+        <nav id="nav-menu-container">
+          <ul class="nav-menu">
+            <li class="menu-active"><a href="">Home</a></li>
+            <li><a href="">About Us</a></li>
+            <li><a href="">Company</a></li>
+            <li><a href="">Contact</a></li>
+            
+            <li class="menu-has-children"><a href="">Drop Down</a>
+              <ul>
+                <li><a href="#">Drop Down 1</a></li>
+                <li><a href="#">Drop Down 3</a></li>
+                <li><a href="#">Drop Down 4</a></li>
+                <li><a href="#">Drop Down 5</a></li>
+              </ul>
+            </li>
+             <li class="menu-has-children"><a href="">Drop Down</a>
+              <ul>
+                <li><a href="#">Drop Down 1</a></li>
+                <li><a href="#">Drop Down 3</a></li>
+                <li><a href="#">Drop Down 4</a></li>
+                <li><a href="#">Drop Down 5</a></li>
+              </ul>
+            </li>
+          </ul>
+        </nav><!-- nav-menu -->
       </div>
-
-      <nav id="nav-menu-container">
-        <ul class="nav-menu">
-          <li class="menu-active"><a href="">Home</a></li>
-          <li><a href="">About Us</a></li>
-          <li><a href="">Company</a></li>
-          <li><a href="">Contact</a></li>
-          
-          <li class="menu-has-children"><a href="">Drop Down</a>
-            <ul>
-              <li><a href="#">Drop Down 1</a></li>
-              <li><a href="#">Drop Down 3</a></li>
-              <li><a href="#">Drop Down 4</a></li>
-              <li><a href="#">Drop Down 5</a></li>
-            </ul>
-          </li>
-           <li class="menu-has-children"><a href="">Drop Down</a>
-            <ul>
-              <li><a href="#">Drop Down 1</a></li>
-              <li><a href="#">Drop Down 3</a></li>
-              <li><a href="#">Drop Down 4</a></li>
-              <li><a href="#">Drop Down 5</a></li>
-            </ul>
-          </li>
-        </ul>
-      </nav><!-- nav-menu -->
-
+    </header><!-- header -->
+  
+  
+  <!-- Carousel -->
+  <div class="container">
+    <div class="row">
+      <!-- Carousel -->
+        <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+        <!-- Indicators -->
+        <ol class="carousel-indicators">
+            <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+            <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+            <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+        </ol>
+        <!-- Wrapper for slides -->
+        <div class="carousel-inner">
+            <div class="item active">
+              <img src="../assets/picture/slides1.jpg" alt="First slide">
+                      <!-- Static Header -->
+                      <div class="header-text hidden-xs">
+                          <div class="col-md-12 text-center">
+                              <h2>
+                                <span>SLIDE 1</span>
+                              </h2>
+                              <br>
+                              <div class="">
+                                  <a class="btn btn-theme btn-sm btn-min-block" href="#">Read More</a></div>
+                          </div>
+                      </div><!-- /header-text -->
+            </div>
+            <div class="item">
+              <img src="../assets/picture/slides2.jpg" alt="Second slide">
+              <!-- Static Header -->
+                      <div class="header-text hidden-xs">
+                          <div class="col-md-12 text-center">
+                              <h2>
+                                  <span>SLIDE 2</span>
+                              </h2>
+                              <br>
+                              <div class="">
+                                  <a class="btn btn-theme btn-sm btn-min-block" href="#">Read More</a></div>
+                          </div>
+                      </div><!-- /header-text -->
+            </div>
+            <div class="item">
+              <img src="../assets/picture/slides3.jpg" alt="Third slide">
+              <!-- Static Header -->
+                      <div class="header-text hidden-xs">
+                          <div class="col-md-12 text-center">
+                              <h2>
+                                  <span>OSLIDE 3</span>
+                              </h2>
+                              <br>
+                              <div class="">
+                                  <a class="btn btn-theme btn-sm btn-min-block" href="#">Read More</a></div>
+                          </div>
+                      </div><!-- /header-text -->
+            </div>
+        </div>
+        <!-- Controls -->
+        <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left"></span>
+        </a>
+        <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right"></span>
+        </a>
+      </div><!-- Carousel END -->
     </div>
-  </header><!-- header -->
+  </div>
+  
 
+
+  <!-- Main -->
+  <div class="container">
+      <div class="row">
+          <div class="col-sm-4 col-md-4">
+              <div class="post news">
+                  <div class="post-img-content">
+                      <img src="http://placehold.it/460x250/e67e22/ffffff&text=Lorem" class="img-responsive" />
+                      <span class="post-date">Lorem Ipsum</span>
+                  </div>
+                  <br>
+                  <div class="content">
+                      <div>
+                          Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
+                          Ipsum has been the industry's standard dummy text ever since the 1500s, when an
+                          unknown printer took a galley of type and scrambled it to make a type specimen book.
+                      </div>
+                      <div>
+                      </div>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-5 col-md-5">
+              <div class="post work">
+                  <div class="post-img-content">
+                      <img src="http://placehold.it/460x250/2980b9/ffffff&text=Lorem" class="img-responsive" />
+                      <span class="post-date">Lorem Ipsum</span>
+                  </div>
+                  <br>
+                  <div class="content">
+                      <div>
+                          Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
+                          Ipsum has been the industry's standard dummy text ever since the 1500s, when an
+                          unknown printer took a galley of type and scrambled it to make a type specimen book.
+                      </div>
+                      <div>
+                      </div>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-3 col-md-3">
+              <div class="post feed">
+                  <div class="post-img-content">
+                      <img src="http://placehold.it/460x250/47A447/ffffff&text=Lorem" class="img-responsive" />
+                      <span class="post-date">Lorem Ipsum</span>
+                  </div>
+                  <br>
+                  <div class="content">
+                      <div>
+                          Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
+                          Ipsum has been the industry's standard dummy text ever since the 1500s, when an
+                          unknown printer took a galley of type and scrambled it to make a type specimen book.
+                      </div>
+                      <div>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </div>
+    
+  
+  </body>
+  
