--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -36,7 +36,6 @@
   <!-- Carousel -->
   <div class="container">
     <div class="row">
-      <!-- Carousel -->
         <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
         <!-- Indicators -->
         <ol class="carousel-indicators">
@@ -44,11 +43,10 @@
             <li data-target="#carousel-example-generic" data-slide-to="1"></li>
             <li data-target="#carousel-example-generic" data-slide-to="2"></li>
         </ol>
-        <!-- Wrapper for slides -->
+        <!-- slides -->
         <div class="carousel-inner">
             <div class="item active">
               <img src="../assets/picture/slides1.jpg" alt="First slide">
-                      <!-- Static Header -->
                       <div class="header-text hidden-xs">
                           <div class="col-md-12 text-center">
                               <h2>
@@ -58,11 +56,10 @@
                               <div class="">
                                   <a class="btn btn-theme btn-sm btn-min-block" href="#">Read More</a></div>
                           </div>
-                      </div><!-- /header-text -->
+                      </div>
             </div>
             <div class="item">
               <img src="../assets/picture/slides2.jpg" alt="Second slide">
-              <!-- Static Header -->
                       <div class="header-text hidden-xs">
                           <div class="col-md-12 text-center">
                               <h2>
@@ -72,11 +69,10 @@
                               <div class="">
                                   <a class="btn btn-theme btn-sm btn-min-block" href="#">Read More</a></div>
                           </div>
-                      </div><!-- /header-text -->
+                      </div>
             </div>
             <div class="item">
               <img src="../assets/picture/slides3.jpg" alt="Third slide">
-              <!-- Static Header -->
                       <div class="header-text hidden-xs">
                           <div class="col-md-12 text-center">
                               <h2>
@@ -86,7 +82,7 @@
                               <div class="">
                                   <a class="btn btn-theme btn-sm btn-min-block" href="#">Read More</a></div>
                           </div>
-                      </div><!-- /header-text -->
+                      </div>
             </div>
         </div>
         <!-- Controls -->
@@ -114,9 +110,7 @@
                   <br>
                   <div class="content">
                       <div>
-                          Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
-                          Ipsum has been the industry's standard dummy text ever since the 1500s, when an
-                          unknown printer took a galley of type and scrambled it to make a type specimen book.
+                          Lorem Ipsum 
                       </div>
                       <div>
                       </div>
@@ -132,9 +126,7 @@
                   <br>
                   <div class="content">
                       <div>
-                          Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
-                          Ipsum has been the industry's standard dummy text ever since the 1500s, when an
-                          unknown printer took a galley of type and scrambled it to make a type specimen book.
+                          Lorem Ipsum 
                       </div>
                       <div>
                       </div>
@@ -150,9 +142,7 @@
                   <br>
                   <div class="content">
                       <div>
-                          Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
-                          Ipsum has been the industry's standard dummy text ever since the 1500s, when an
-                          unknown printer took a galley of type and scrambled it to make a type specimen book.
+                          Lorem Ipsum 
                       </div>
                       <div>
                       </div>
