--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+
 <body>
   <header id="header">
   <div class="container">
@@ -32,126 +33,154 @@
       </div>
     </header><!-- header -->
   
+    <main>
+    <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="../assets/picture/home6.jpg"  width="100%" height="100%"  >
   
-  <!-- Carousel -->
-  <div class="container">
-    <div class="row">
-        <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-        <!-- Indicators -->
-        <ol class="carousel-indicators">
-            <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-            <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-            <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-        </ol>
-        <!-- slides -->
-        <div class="carousel-inner">
-            <div class="item active">
-              <img src="../assets/picture/slides1.jpg" alt="First slide">
-                      <div class="header-text hidden-xs">
-                          <div class="col-md-12 text-center">
-                              <h2>
-                                <span>SLIDE 1</span>
-                              </h2>
-                              <br>
-                              <div class="">
-                                  <a class="btn btn-theme btn-sm btn-min-block" href="#">Read More</a></div>
-                          </div>
-                      </div>
+          <div class="container">
+            <div class="carousel-caption text-start">
+              <h1>Example headline.</h1>
+              <p>Edit</p>
+              <p><a class="btn btn-lg btn-primary" href="#" role="button">GO TO</a></p>
             </div>
-            <div class="item">
-              <img src="../assets/picture/slides2.jpg" alt="Second slide">
-                      <div class="header-text hidden-xs">
-                          <div class="col-md-12 text-center">
-                              <h2>
-                                  <span>SLIDE 2</span>
-                              </h2>
-                              <br>
-                              <div class="">
-                                  <a class="btn btn-theme btn-sm btn-min-block" href="#">Read More</a></div>
-                          </div>
-                      </div>
-            </div>
-            <div class="item">
-              <img src="../assets/picture/slides3.jpg" alt="Third slide">
-                      <div class="header-text hidden-xs">
-                          <div class="col-md-12 text-center">
-                              <h2>
-                                  <span>OSLIDE 3</span>
-                              </h2>
-                              <br>
-                              <div class="">
-                                  <a class="btn btn-theme btn-sm btn-min-block" href="#">Read More</a></div>
-                          </div>
-                      </div>
-            </div>
+          </div>
         </div>
-        <!-- Controls -->
-        <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
-            <span class="glyphicon glyphicon-chevron-left"></span>
-        </a>
-        <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
-            <span class="glyphicon glyphicon-chevron-right"></span>
-        </a>
-      </div><!-- Carousel END -->
+      </div>
     </div>
-  </div>
+  
+  
+    <!-- featurettes -->
+  
+    <div class="container marketing">
+  
+      <div class="row">
+        <div class="col-lg-4">
+          <img src="../assets/picture/cm.png"  width="100%" height="50%" >
+
+          <h2>Our Mission</h2>
+          <p>Get started with MDBootstrap, the world's most popular Material Design framework for building responsive, mobile-first sites.</p>
+          <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+        </div>
+        <div class="col-lg-4">
+          <img src="../assets/picture/service1.png"  width="100%" height="50%" >
+
+          <h2>Our Business</h2>
+          <p>Learn how to create a smart website which learns your user and reacts properly to his behavior.</p>
+          <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+        </div>
+        <div class="col-lg-4">
+          <img src="../assets/picture/trendy.jpg"  width="100%" height="50%" >
+
+          <h2>Company Overview</h2>
+          <p>Push messaging provides a simple and effective way to re-engage with your users and in this tutorial you'll learn how to add push notifications to your web app.</p>
+          <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+        </div>
+      </div>
+  
+  
+      <!--FEATURETTES -->
+
+      <hr class="featurette-divider">
+  
+      <div class="row featurette">
+        <div class="col-md-7">
+          <h2 class="featurette-heading">First featurette heading. <span class="text-muted">It’ll blow your mind.</span></h2>
+          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+        </div>
+        <div class="col-md-5">
+          <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"/><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text></svg>
+  
+        </div>
+      </div>
+  
+      <hr class="featurette-divider">
+  
+      <div class="row featurette">
+        <div class="col-md-7 order-md-2">
+          <h2 class="featurette-heading">Oh yeah, it’s that good. <span class="text-muted">See for yourself.</span></h2>
+          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+        </div>
+        <div class="col-md-5 order-md-1">
+          <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"/><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text></svg>
+  
+        </div>
+      </div>
+  
+      <hr class="featurette-divider">
+  
+      <div class="row featurette">
+        <div class="col-md-7">
+          <h2 class="featurette-heading">And lastly, this one. <span class="text-muted">Checkmate.</span></h2>
+          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+        </div>
+        <div class="col-md-5">
+          <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"/><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text></svg>
+  
+        </div>
+      </div>
+  
+      <hr class="featurette-divider">
+  
+    </div>
   
 
-
-  <!-- Main -->
-  <div class="container">
-      <div class="row">
-          <div class="col-sm-4 col-md-4">
-              <div class="post news">
-                  <div class="post-img-content">
-                      <img src="http://placehold.it/460x250/e67e22/ffffff&text=Lorem" class="img-responsive" />
-                      <span class="post-date">Lorem Ipsum</span>
+    <div class="container">
+      <div class="row" >
+          <div class="col-md-6 col-md-offset-3" >
+            <div class="well well-sm">
+              <form class="form-horizontal" action="" method="post">
+              <fieldset>
+                <legend class="text-center">Contact us</legend>
+        
+                <!-- Name input-->
+                <div class="form-group">
+                  <label class="col-md-3 control-label" for="name">Name</label>
+                  <div class="col-md-9">
+                    <input id="name" name="name" type="text" placeholder="Your name" class="form-control">
                   </div>
-                  <br>
-                  <div class="content">
-                      <div>
-                          Lorem Ipsum 
-                      </div>
-                      <div>
-                      </div>
+                </div>
+        
+                <!-- Email input-->
+                <div class="form-group">
+                  <label class="col-md-3 control-label" for="email">Your E-mail</label>
+                  <div class="col-md-9">
+                    <input id="email" name="email" type="text" placeholder="Your email" class="form-control">
                   </div>
-              </div>
-          </div>
-          <div class="col-sm-5 col-md-5">
-              <div class="post work">
-                  <div class="post-img-content">
-                      <img src="http://placehold.it/460x250/2980b9/ffffff&text=Lorem" class="img-responsive" />
-                      <span class="post-date">Lorem Ipsum</span>
+                </div>
+        
+                <!-- Message body -->
+                <div class="form-group">
+                  <label class="col-md-3 control-label" for="message">Your message</label>
+                  <div class="col-md-9">
+                    <textarea class="form-control" id="message" name="message" placeholder="Please enter your message here..." rows="5"></textarea>
                   </div>
-                  <br>
-                  <div class="content">
-                      <div>
-                          Lorem Ipsum 
-                      </div>
-                      <div>
-                      </div>
+                </div>
+        
+                <!-- Form actions -->
+                <div class="form-group">
+                  <div class="col-md-12 text-right">
+                    <button type="submit" class="btn btn-primary btn-lg">Submit</button>
                   </div>
-              </div>
-          </div>
-          <div class="col-sm-3 col-md-3">
-              <div class="post feed">
-                  <div class="post-img-content">
-                      <img src="http://placehold.it/460x250/47A447/ffffff&text=Lorem" class="img-responsive" />
-                      <span class="post-date">Lorem Ipsum</span>
-                  </div>
-                  <br>
-                  <div class="content">
-                      <div>
-                          Lorem Ipsum 
-                      </div>
-                      <div>
-                      </div>
-                  </div>
-              </div>
+                </div>
+              </fieldset>
+              </form>
+            </div>
           </div>
       </div>
-  </div>
-    
+    </div>
+
   
-  </body>
+    <!-- FOOTER -->
+    <footer class="container">
+      <p class="float-end"><a href="#">Back to top</a></p>
+      <p>&copy; THAI DCR Company &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+    </footer>
+  </main>
   
+  
+      <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
+  
+        
+    </body>
