--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,8 +8,8 @@
         <nav id="nav-menu-container">
           <ul class="nav-menu">
             <li class="menu-active"><a href="">Home</a></li>
+            <li><a routerLink="/company" routerLinkActive="active">Company</a></li>
             <li><a href="">About Us</a></li>
-            <li><a href="">Company</a></li>
             <li><a href="">Contact</a></li>
             
             <li class="menu-has-children"><a href="">Drop Down</a>
@@ -184,3 +184,4 @@
   
         
     </body>
+   
