--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
         <nav id="nav-menu-container">
           <ul class="nav-menu">
             <li class="menu-active"><a href="">Home</a></li>
-            <li><a routerLink="/company" routerLinkActive="active">Company</a></li>
+            <li><a routerLink="/company">Company</a></li>
             <li><a href="">About Us</a></li>
             <li><a href="">Contact</a></li>
             
@@ -178,10 +178,9 @@
       <p>&copy; THAI DCR Company &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
     </footer>
   </main>
-  
-  
+
       <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
   
-        
     </body>
+    <router-outlet></router-outlet>
    
