--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -125,51 +125,45 @@
     </div>
   
 
-    <div class="container">
-      <div class="row" >
-          <div class="col-md-6 col-md-offset-3" >
-            <div class="well well-sm">
-              <form class="form-horizontal" action="" method="post">
-              <fieldset>
-                <legend class="text-center">Contact us</legend>
-        
-                <!-- Name input-->
-                <div class="form-group">
-                  <label class="col-md-3 control-label" for="name">Name</label>
-                  <div class="col-md-9">
-                    <input id="name" name="name" type="text" placeholder="Your name" class="form-control">
-                  </div>
-                </div>
-        
-                <!-- Email input-->
-                <div class="form-group">
-                  <label class="col-md-3 control-label" for="email">Your E-mail</label>
-                  <div class="col-md-9">
-                    <input id="email" name="email" type="text" placeholder="Your email" class="form-control">
-                  </div>
-                </div>
-        
-                <!-- Message body -->
-                <div class="form-group">
-                  <label class="col-md-3 control-label" for="message">Your message</label>
-                  <div class="col-md-9">
-                    <textarea class="form-control" id="message" name="message" placeholder="Please enter your message here..." rows="5"></textarea>
-                  </div>
-                </div>
-        
-                <!-- Form actions -->
-                <div class="form-group">
-                  <div class="col-md-12 text-right">
-                    <button type="submit" class="btn btn-primary btn-lg">Submit</button>
-                  </div>
-                </div>
-              </fieldset>
-              </form>
-            </div>
+    <div class="section landing-section">
+      <div class="container">
+          <div class="row">
+              <div class="col-md-8 mr-auto ml-auto">
+                  <h2 class="text-center">Keep in touch?</h2>
+                  <form class="contact-form">
+                      <div class="row">
+                          <div class="col-md-6">
+                              <label>Name</label>
+                              <div class="input-group" [ngClass]="">
+                                  <div class="input-group-prepend">
+                                    <span class="input-group-text"><i class="nc-icon nc-single-02"></i></span>
+                                  </div>
+                                  <input type="text" class="form-control" placeholder="Name"  >
+                              </div>
+                          </div>
+                          <div class="col-md-6">
+                              <label>Email</label>
+                              <div class="input-group" [ngClass]="">
+                                  <div class="input-group-prepend">
+                                    <span class="input-group-text">  <i class="nc-icon nc-email-85"></i></span>
+                                  </div>
+                                  <input type="text" class="form-control" placeholder="Email"  >
+                              </div>
+                          </div>
+                      </div>
+                      <label>Message</label>
+                      <textarea class="form-control" rows="4" placeholder="Tell us your thoughts and feelings..."></textarea>
+                      <div class="row">
+                          <div class="col-md-4 mr-auto ml-auto">
+                              <button class="btn btn-danger btn-lg btn-fill">Send Message</button>
+                          </div>
+                      </div>
+                  </form>
+              </div>
           </div>
       </div>
-    </div>
-
+  </div>
+  <hr class="featurette-divider">
   
     <!-- FOOTER -->
     <footer class="container">
