--- a/src/app/company/company.component.html
+++ b/src/app/company/company.component.html
@@ -1,2 +1,68 @@
-<p>header works!</p>
-<router-outlet></router-outlet>
+
+<body>
+    <header id="header">
+    <div class="container">
+          <div id="logo" class="pull-left">
+            <h1><a href="#intro" class="scrollto">THAI DCR</a></h1>
+          </div>
+          <nav id="nav-menu-container">
+            <ul class="nav-menu">
+              <li ><a href="/home">Home</a></li>
+              <li class="menu-active"><a href="/company">Company</a></li>
+              <li><a href="/about">About Us</a></li>
+              <li><a href="">Contact</a></li>
+              
+              <li class="menu-has-children"><a href="">Drop Down</a>
+                <ul>
+                  <li><a href="#">Drop Down 1</a></li>
+                  <li><a href="#">Drop Down 3</a></li>
+                  <li><a href="#">Drop Down 4</a></li>
+                  <li><a href="#">Drop Down 5</a></li>
+                </ul>
+              </li>
+               <li class="menu-has-children"><a href="">Drop Down</a>
+                <ul>
+                  <li><a href="#">Drop Down 1</a></li>
+                  <li><a href="#">Drop Down 3</a></li>
+                  <li><a href="#">Drop Down 4</a></li>
+                  <li><a href="#">Drop Down 5</a></li>
+                </ul>
+              </li>
+            </ul>
+          </nav><!-- nav-menu -->
+        </div>
+      </header><!-- header -->
+    
+      <main>
+      <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="../assets/picture/home6.jpg"  width="100%" height="100%"  >
+    
+            <div class="container">
+              <div class="carousel-caption text-start">
+                <h1>Example headline.</h1>
+                <p>Edit</p>
+                <p><a class="btn btn-lg btn-primary" href="#" role="button">GO TO</a></p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    
+    
+  
+    <hr class="featurette-divider">
+    
+      <!-- FOOTER -->
+      <footer class="container">
+        <p class="float-end"><a href="#">Back to top</a></p>
+        <p>&copy; THAI DCR Company &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+      </footer>
+    </main>
+  
+        <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
+    
+      </body>
+
+     
