--- a/src/app/company/company.component.html
+++ b/src/app/company/company.component.html
@@ -10,7 +10,7 @@
               <li ><a href="/home">Home</a></li>
               <li class="menu-active"><a href="/company">Company</a></li>
               <li><a href="/about">About Us</a></li>
-              <li><a href="">Contact</a></li>
+              <li><a href="/contact">Contact</a></li>
               
               <li class="menu-has-children"><a href="">Drop Down</a>
                 <ul>
@@ -51,6 +51,10 @@
       </div>
     
     
+
+
+
+      
   
     <hr class="featurette-divider">
     
