--- a/src/app/components/components.component.html
+++ b/src/app/components/components.component.html
@@ -10,7 +10,7 @@
               <li class="menu-active"><a href="">Home</a></li>
               <li><a routerLink="/company">Company</a></li>
               <li><a routerLink="/about">About Us</a></li>
-              <li><a href="">Contact</a></li>
+              <li><a href="/contact">Contact</a></li>
               
               <li class="menu-has-children"><a href="">Drop Down</a>
                 <ul>
