--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -9,8 +9,8 @@
             <ul class="nav-menu">
               <li ><a href="/home">Home</a></li>
               <li><a href="/company">Company</a></li>
-              <li class="menu-active"><a href="/about">About Us</a></li>
-              <li><a href="/contact">Contact</a></li>
+              <li><a href="/about">About Us</a></li>
+              <li class="menu-active"><a href="/contact">Contact</a></li>
               
               <li class="menu-has-children"><a href="">Drop Down</a>
                 <ul>
