--- a/src/app/company/company.component.html
+++ b/src/app/company/company.component.html
@@ -49,12 +49,19 @@
           </div>
         </div>
       </div>
-    
-    
+    </main>
+    </body>
+    <hr class="featurette-divider">
 
-
-
-      
+  <div>
+      <ag-grid-angular
+          class="ag-theme-alpine"
+          #agGrid
+          [columnDefs]="columnDefs"
+          [rowData]="rowData"
+      >
+      </ag-grid-angular>
+  </div>
   
     <hr class="featurette-divider">
     
@@ -63,10 +70,10 @@
         <p class="float-end"><a href="#">Back to top</a></p>
         <p>&copy; THAI DCR Company &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
       </footer>
-    </main>
+    
   
         <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
     
-      </body>
+      
 
      
