--- a/src/app/company/company.component.html
+++ b/src/app/company/company.component.html
@@ -53,7 +53,10 @@
     </body>
     <hr class="featurette-divider">
 
- 
+
+    <!-- Table -->
+    <!-- ag grid -->
+    
   
     <hr class="featurette-divider">
     
@@ -65,6 +68,8 @@
     
   
         <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
+
+        
     
       
 
