--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,5 +1,5 @@
 
-<body>
+
     <header id="header">
     <div class="container">
           <div id="logo" class="pull-left">
@@ -12,15 +12,15 @@
               <li class="menu-active"><a href="/about">About Us</a></li>
               <li><a href="/contact">Contact</a></li>
               
-              <li class="menu-has-children"><a href="">Drop Down</a>
+              <li class="menu-has-children"><a href="">Playground</a>
                 <ul>
-                  <li><a href="#">Drop Down 1</a></li>
-                  <li><a href="#">Drop Down 3</a></li>
-                  <li><a href="#">Drop Down 4</a></li>
+                  <li><a href="#">Icon test 1</a></li>
+                  <li><a href="#">Gird test 3</a></li>
+                  <li><a href="#">New page</a></li>
                   <li><a href="#">Drop Down 5</a></li>
                 </ul>
               </li>
-               <li class="menu-has-children"><a href="">Drop Down</a>
+               <li class="menu-has-children"><a href="">Playground</a>
                 <ul>
                   <li><a href="#">Drop Down 1</a></li>
                   <li><a href="#">Drop Down 3</a></li>
@@ -33,7 +33,7 @@
         </div>
       </header><!-- header -->
     
-      <main>
+
       <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
@@ -51,7 +51,91 @@
       </div>
     
     
-  
+      <!-- Service -->
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-2 col-lg-offset-5">
+            <hr class="marginbot-50">
+          </div>
+        </div>
+        <div class="row">
+          <!--<div class="col-md-3"-->
+            <div class="wow fadeInLeft" data-wow-delay="0.2s">
+              <div class="service-box">
+                <div class="service-icon">
+                  <img src="../assets/picture/service1.png" alt="" />
+                </div>
+                <div class="service-desc">
+        
+                  <h4>Thai DCR Co., Ltd.</h4>
+          <table width="900" align="center">
+    <tr>
+      <td width="308"><h4><p> エンジニアリングサービス</p></h4></td>
+      <td width="55">&nbsp;</td>
+      <td width="426"><h4><p> ソフトウエア開発</p></h4></td>
+    </tr>
+    <tr>
+      <td>総合物流システムの機械設計 </td>
+      <td>&nbsp;</td>
+      <td>&nbsp;&nbsp; - 製造業の生産系管理システム（仕入・在庫・出庫・販売・事務管理)</td>
+    </tr>
+    
+    <tr>
+      <td>&nbsp;&nbsp; - 立体自動倉庫をはじめとする各種保管システム</td>
+      <td>&nbsp;</td>
+      <td>&nbsp;&nbsp; - システム化のご相談</td>
+    </tr>
+    <tr>
+      <td>&nbsp;&nbsp; - 高速仕分け・ピッキングシステム</td>
+      <td>&nbsp;</td>
+      <td>&nbsp;&nbsp; - システム設計</td>
+    </tr>
+    <tr>
+      <td>&nbsp;&nbsp; - 無人搬送車（ビーグル）</td>
+      <td>&nbsp;</td>
+      <td>&nbsp;&nbsp; - プログラミング</td>
+    </tr>
+      <tr>
+      <td>&nbsp;&nbsp; - 倉庫内、工場内、配送センター内コンベアシステム</td>
+      <td>&nbsp;</td>
+      <td>&nbsp;&nbsp; - オフショア開発</td>
+      </tr>
+    
+    <tr>
+      <td>&nbsp;&nbsp; - オフショア設計</td>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
+    </tr>
+    <tr>
+      <td>&nbsp;&nbsp; - ２Ｄ　AUTOCAD</td>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
+    </tr>
+    <tr>
+      <td>自動車部品製造工場の設備設計</td>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
+    </tr>
+      <tr>
+      <td>&nbsp;&nbsp; - 製造ラインのコンセプトデザイン</td>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
+      </tr>
+    <tr>
+      <td>&nbsp;&nbsp; - ２Ｄ　AUTOCAD</td>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
+    </tr>
+    <tr>
+      <td>&nbsp;&nbsp; - ３Ｄ　Ｉ－ＣＡＤ、ＣＡＴＩＡ</td>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
+    </tr>
+  </table>
+
+
+
+      <!-- Service -->
     <hr class="featurette-divider">
     
       <!-- FOOTER -->
@@ -59,10 +143,6 @@
         <p class="float-end"><a href="#">Back to top</a></p>
         <p>&copy; THAI DCR Company &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
       </footer>
-    </main>
-  
-        <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
-    
-      </body>
+
 
      
