--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -12,15 +12,15 @@
               <li><a href="/about">About Us</a></li>
               <li class="menu-active"><a href="/contact">Contact</a></li>
               
-              <li class="menu-has-children"><a href="">Drop Down</a>
+              <li class="menu-has-children"><a href="">Playground</a>
                 <ul>
-                  <li><a href="#">Drop Down 1</a></li>
-                  <li><a href="#">Drop Down 3</a></li>
-                  <li><a href="#">Drop Down 4</a></li>
+                  <li><a href="#">Icon test 1</a></li>
+                  <li><a href="#">Gird test 3</a></li>
+                  <li><a href="#">New page</a></li>
                   <li><a href="#">Drop Down 5</a></li>
                 </ul>
               </li>
-               <li class="menu-has-children"><a href="">Drop Down</a>
+               <li class="menu-has-children"><a href="">Playground</a>
                 <ul>
                   <li><a href="#">Drop Down 1</a></li>
                   <li><a href="#">Drop Down 3</a></li>
@@ -50,12 +50,85 @@
         </div>
       </div>
     
-    
+      
+        <!-- Section: contact -->
+  <section id="contact" class="home-section text-center">
+    <div class="heading-contact">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-8 col-lg-offset-2">
+            <div class="wow bounceInDown" data-wow-delay="0.4s">
+              <div class="section-heading">
+                <h2>LOCATION</h2>
+                <i class="fa fa-2x fa-angle-down"></i>
 
-      <h1>{{ title }}</h1>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="container">
 
-<!-- this creates a google map on the page with the given lat/lng from -->
-<!-- the component as the initial center of the map: -->
+      <div class="row">
+        <div class="col-lg-2 col-lg-offset-5">
+          <hr class="marginbot-50">
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-8">
+          <div class="boxed-grey">
+
+            <div id="errormessage"></div>
+            <form id="contact-form" action="" method="post" role="form" class="contactForm">
+              <div class="row">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5480.98993862278!2d100.55337002330312!3d13.739920608142588!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x30e29ee6a6d3b67b%3A0x5d10bf5e09e2e651!2sTrendy!5e0!3m2!1sth!2sth!4v1580184791169!5m2!1sth!2sth" width="100%" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+                <div class="col-md-6">
+                  <div class="form-group">
+                    <label for="name">
+                               </label>
+                   
+                    <div class="validation"></div>
+                  </div>
+                </div>
+                <div class="col-md-12">
+                  
+                </div>
+              </div>
+            </form>
+          </div>
+        </div>
+
+        <div class="col-lg-4">
+          <div class="widget-contact">
+            <h5>Head Office</h5>
+
+            <address>
+				  <strong>Thai DCR Co., Ltd. &amp; J Wellness Co., Ltd</strong><br>
+				  10/155 (Room No.1802) 18th Floor,<br>
+				  The Trendy Building, Soi.Sukhumvit 13 (Saengchan) <br>
+				  Klongtoey-Nua,Wattana, Bangkok 10110 Thailand<br>
+				  <abbr title="Phone">Tel : </abbr> (+66) 02-168-7383<br>
+				  <abbr title="Phone">Fax : </abbr> (+66) 02-168-7384
+				</address>
+
+            <address>
+				  <strong>Email</strong><br>
+				  <a href="mailto:#">jittinan@thaidcr.com</a>
+				</address>
+            <address>
+				 
+				</address>
+
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </section>
+  <!-- /Section: contact -->
+
+
 
   
     <hr class="featurette-divider">
@@ -66,9 +139,6 @@
         <p>&copy; THAI DCR Company &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
       </footer>
     </main>
-  
-        <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
-    
       </body>
 
      
