--- a/src/app/company/company.component.html
+++ b/src/app/company/company.component.html
@@ -12,15 +12,15 @@
               <li><a href="/about">About Us</a></li>
               <li><a href="/contact">Contact</a></li>
               
-              <li class="menu-has-children"><a href="">Drop Down</a>
+              <li class="menu-has-children"><a href="">Playground</a>
                 <ul>
-                  <li><a href="#">Drop Down 1</a></li>
-                  <li><a href="#">Drop Down 3</a></li>
-                  <li><a href="#">Drop Down 4</a></li>
+                  <li><a href="#">Icon test 1</a></li>
+                  <li><a href="#">Gird test 3</a></li>
+                  <li><a href="#">New page</a></li>
                   <li><a href="#">Drop Down 5</a></li>
                 </ul>
               </li>
-               <li class="menu-has-children"><a href="">Drop Down</a>
+               <li class="menu-has-children"><a href="">Playground</a>
                 <ul>
                   <li><a href="#">Drop Down 1</a></li>
                   <li><a href="#">Drop Down 3</a></li>
@@ -51,10 +51,90 @@
       </div>
     </main>
     </body>
-    <hr class="featurette-divider">
-
 
     <!-- Table -->
+    <div class="container">
+
+      <table class="table table-sm">
+  <thead>
+    <tr>
+      <th scope="col"></th>
+      <th scope="col"><img src="../assets/picture/logo2.png" /></th>
+      <th scope="col"></th>
+      <th scope="col"><img src="../assets/picture/logo1.png" /></th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th scope="row">資本金
+</th>
+      <td>11,200,000 Baht</td>
+      <td>&nbsp;</td>
+      <td>2,500,000 Baht</td>
+    </tr>
+    <tr>
+      <th scope="row">設立</th>
+      <td>2010.02.11</td>
+      <td>&nbsp;</td>
+      <td>2011.03.18</td>
+    </tr>
+    <tr>
+      <th scope="row">代表</th>
+      <td colspan="2">高橋基成</td>
+      <td>高橋基成</td>
+    </tr>
+    <tr>
+    <th scope="row">取締役</th>
+      <td colspan="2">内田康司</td>
+      <td>&nbsp;</td>
+    </tr>
+    <tr>
+    <th scope="row"></th>
+      <td colspan="2">&nbsp;</td>
+      <td>&nbsp;</td>
+    </tr>
+    <tr>
+    <th scope="row">主要取引先</th>
+      <td colspan="2">DAIICHI SYSTEM ENGINEERING CO., LTD.</td>
+      <td>&nbsp;</td>
+    </tr>
+    <tr>
+    <th scope="row"></th>
+      <td colspan="2">DAIFUKU(THAILAND) LTD.</td>
+      <td>&nbsp;</td>
+    </tr>
+    <tr>
+    <th scope="row"></th>
+      <td colspan="2">DENSO(THAILAND) CO., LTD.</td>
+      <td>&nbsp;</td>
+    </tr>
+    <tr>
+    <th scope="row">関連会社</th>
+      <td colspan="2">DCR     株式会社第一コンピュータリソース</td>
+      <td>&nbsp;</td>
+    </tr>
+    <tr>
+    <th scope="row"></th>
+      <td colspan="2">DSE     株式会社第一システムエンジニアリング</td>
+      <td>&nbsp;</td>
+    </tr>
+    <tr>
+    <th scope="row"></th>
+      <td colspan="2">Larry the Bird</td>
+      <td>&nbsp;</td>
+    </tr>
+    <tr>
+    <th scope="row"></th>
+      <td colspan="2">海外     BEIJIN DCR CO., LTD.</td>
+      <td>&nbsp;</td>
+    </tr>
+    <tr>
+    <th scope="row"></th>
+      <td colspan="2">海外     Myanmar DCR CO., LTD.</td>
+      <td>&nbsp;</td>
+    </tr>
+  </tbody>
+</table>
     <!-- ag grid -->
     
   
@@ -66,8 +146,7 @@
         <p>&copy; THAI DCR Company &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
       </footer>
     
-  
-        <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
+
 
         
     
