--- a/src/app/components/components.component.html
+++ b/src/app/components/components.component.html
@@ -12,15 +12,15 @@
               <li><a routerLink="/about">About Us</a></li>
               <li><a href="/contact">Contact</a></li>
               
-              <li class="menu-has-children"><a href="">Drop Down</a>
+              <li class="menu-has-children"><a href="">Playground</a>
                 <ul>
-                  <li><a href="#">Drop Down 1</a></li>
-                  <li><a href="#">Drop Down 3</a></li>
-                  <li><a href="#">Drop Down 4</a></li>
+                  <li><a href="#">Icon test 1</a></li>
+                  <li><a href="#">Gird test 3</a></li>
+                  <li><a href="#">New page</a></li>
                   <li><a href="#">Drop Down 5</a></li>
                 </ul>
               </li>
-               <li class="menu-has-children"><a href="">Drop Down</a>
+               <li class="menu-has-children"><a href="">Playground</a>
                 <ul>
                   <li><a href="#">Drop Down 1</a></li>
                   <li><a href="#">Drop Down 3</a></li>
@@ -171,8 +171,6 @@
         <p>&copy; THAI DCR Company &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
       </footer>
     </main>
-  
-        <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
     
       </body>
   
