--- a/src/app/components/components.component.html
+++ b/src/app/components/components.component.html
@@ -14,8 +14,8 @@
               
               <li class="menu-has-children"><a href="">Playground</a>
                 <ul>
-                  <li><a href="#">Icon test 1</a></li>
-                  <li><a href="#">Gird test 3</a></li>
+                  <li><a href="#">Icon test </a></li>
+                  <li><a href="#">Gird test </a></li>
                   <li><a href="#">New page</a></li>
                   <li><a href="#">Drop Down 5</a></li>
                 </ul>
