--- a/src/app/components/components.component.html
+++ b/src/app/components/components.component.html
@@ -165,11 +165,11 @@
     </div>
     <hr class="featurette-divider">
     
-      <!-- FOOTER -->
+      <!-- FOOTER 
       <footer class="container">
         <p class="float-end"><a href="#">Back to top</a></p>
         <p>&copy; THAI DCR Company &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
-      </footer>
+      </footer>-->
     </main>
     
       </body>
