--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,1 +1,38 @@
-<p>navbar works!</p>
+
+    <header id="header">
+    <div class="container">
+          <div id="logo" class="pull-left">
+            <h1><a href="/home" class="scrollto">THAI DCR</a></h1>
+          </div>
+          <nav id="nav-menu-container">
+            <ul class="nav-menu">
+              <li><a href="/home">Home</a></li>
+              <li><a href="/company">Company</a></li>
+              <li><a href="/about">About Us</a></li>
+              <li><a href="/contact">Contact</a></li>
+              
+              <li class="menu-has-children"><a href="">Playground</a>
+                <ul>
+                  <li><a href="#">Icon test </a></li>
+                  <li><a href="#">Gird test </a></li>
+                  <li><a href="#">New page</a></li>
+                  <li><a href="#">Drop Down 5</a></li>
+                </ul>
+              </li>
+               <li class="menu-has-children"><a href="">Playground</a>
+                <ul>
+                  <li><a href="#">Drop Down 1</a></li>
+                  <li><a href="#">Drop Down 3</a></li>
+                  <li><a href="#">Drop Down 4</a></li>
+                  <li><a href="#">Drop Down 5</a></li>
+                </ul>
+              </li>
+            </ul>
+          </nav><!-- nav-menu -->
+        </div>
+      </header><!-- header -->
+    
+
+
+        
+    
