--- a/src/app/grid/grid.component.html
+++ b/src/app/grid/grid.component.html
@@ -1,1 +1,4 @@
-<p>Test grid</p>
+<div>
+    <button (click)= "switchpage()" [hidden] = "dis">Switch Section</button>
+    <button (click)= "switchpage2()" [hidden] = "dis2">Switch Section</button>
+  </div>
