--- a/src/app/components/components.component.html
+++ b/src/app/components/components.component.html
@@ -1,5 +1,5 @@
 
-<body>
+<!--<body>
     <header id="header">
     <div class="container">
           <div id="logo" class="pull-left">
@@ -29,9 +29,9 @@
                 </ul>
               </li>
             </ul>
-          </nav><!-- nav-menu -->
+          </nav>
         </div>
-      </header><!-- header -->
+      </header> -->
     
       <main>
       <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
@@ -134,7 +134,7 @@
                         <div class="row">
                             <div class="col-md-6">
                                 <label>Name</label>
-                                <div class="input-group" [ngClass]="">
+                                <div class="input-group" >
                                     <div class="input-group-prepend">
                                       <span class="input-group-text"><i class="nc-icon nc-single-02"></i></span>
                                     </div>
@@ -143,7 +143,7 @@
                             </div>
                             <div class="col-md-6">
                                 <label>Email</label>
-                                <div class="input-group" [ngClass]="">
+                                <div class="input-group" >
                                     <div class="input-group-prepend">
                                       <span class="input-group-text">  <i class="nc-icon nc-email-85"></i></span>
                                     </div>
@@ -172,6 +172,6 @@
       </footer>-->
     </main>
     
-      </body>
+ 
   
      
