--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,5 +1,4 @@
-
-    <header id="header">
+  <header id="header">
     <div class="container">
           <div id="logo" class="pull-left">
             <h1><a href="/home" class="scrollto">THAI DCR</a></h1>
@@ -14,8 +13,8 @@
               <li class="menu-has-children"><a href="">Playground</a>
                 <ul>
                   <li><a href="#">Icon test </a></li>
-                  <li><a href="#">Gird test </a></li>
-                  <li><a href="#">New page</a></li>
+                  <li><a href="/grid">Gird test </a></li>
+                  <li><a href="/storage">New page</a></li>
                   <li><a href="#">Drop Down 5</a></li>
                 </ul>
               </li>
