--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -13,8 +13,8 @@
               <li class="menu-has-children"><a href="">Playground</a>
                 <ul>
                   <li><a href="#">Icon test </a></li>
-                  <li><a href="/grid">Gird test </a></li>
-                  <li><a href="/storage">New page</a></li>
+                  <li><a href="/page-test">Gird test </a></li>
+                  <li><a href="#">New page</a></li>
                   <li><a href="#">Drop Down 5</a></li>
                 </ul>
               </li>
