--- a/src/app/page-test/parent/parent.component.html
+++ b/src/app/page-test/parent/parent.component.html
@@ -1,4 +1,3 @@
-
 <body>
     <main>
     <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
@@ -18,8 +17,8 @@
     </div>
   </main>
   </body>
-
+    
 <div>
-    <button (click)= "switchpage()" [hidden] = "dis">Switch Section</button>
-    <button (click)= "switchpage2()" [hidden] = "dis2">Switch Section</button>
-  </div>
+    <button (click)="addParentCount()">ส่งข้อมูล {{ParentCount}}</button>
+    <app-child [ChildCount] = "ParentCount"></app-child>
+</div>
