--- a/src/app/child/child.component.html
+++ b/src/app/child/child.component.html
@@ -1,15 +1,11 @@
 <p>child works! {{count}} </p>
+<body>
 
-<div>
     <ag-grid-angular
-    style="width: 500px; height: 150px;"
+    style="width: 500px; height: 200px;" 
     class="ag-theme-alpine"
     [rowData]="rowData"
     [columnDefs]="columnDefs">
 </ag-grid-angular>
- 
-
-        <p><span style="color:red" >No :</span>
-        <label >{{count}}</label></p>
-    </div>
    
+</body>
