--- a/src/app/page-test/parent/parent.component.html
+++ b/src/app/page-test/parent/parent.component.html
@@ -22,3 +22,10 @@
     <button (click)="addParentCount()">ส่งข้อมูล {{ParentCount}}</button>
     <app-child [ChildCount] = "ParentCount"></app-child>
 </div>
+
+
+
+
+<hr class="featurette-divider">
+
+<footer></footer>
