--- a/src/app/child/child.component.html
+++ b/src/app/child/child.component.html
@@ -1,3 +1,17 @@
-<p>child works! {{count}} </p>
-
-
+<p>
+    child works! {{count}}
+    <button (click)="clearCount()" >Clear</button>
+  </p>
+     <table class="table border">
+          <tr>
+            <td> No </td>
+   </tr>
+            <tr>
+                <td> {{count}} </td>
+       </tr>
+      </table>
+  
+      <!--<ul>
+        <li *ngFor='let l of languages'>{{l}}</li>
+                 {{count}}
+                </ul>-->
