--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -14,8 +14,8 @@
                 <ul>
                   <li><a href="#">Icon test </a></li>
                   <li><a href="/parent">Gird test </a></li>
-                  <li><a href="#">New page</a></li>
-                  <li><a href="#">Drop Down 5</a></li>
+                  <li><a href="/grid">New page</a></li>
+                  <li><a href="/page-test">Drop Down 5</a></li>
                 </ul>
               </li>
                <li class="menu-has-children"><a href="">Playground</a>
