--- a/src/app/grid/grid.component.html
+++ b/src/app/grid/grid.component.html
@@ -23,3 +23,7 @@
     <button (click)= "switchpage()" [hidden] = "dis">Switch Section</button>
     <button (click)= "switchpage2()" [hidden] = "dis2">Switch Section</button>
   </div>
+  
+    <router-outlet></router-outlet>
+  <hr class="featurette-divider">
+<footer></footer>
