--- a/src/app/grid/shopui/shopui.component.html
+++ b/src/app/grid/shopui/shopui.component.html
@@ -34,5 +34,9 @@
       </div>
     </div>
   </div>
+
+  <router-outlet></router-outlet>
+<hr class="featurette-divider">
+<footer></footer>
   
   
