--- a/src/app/grid/storage/storage.component.html
+++ b/src/app/grid/storage/storage.component.html
@@ -1,4 +1,24 @@
 
+<body>
+    <main>
+    <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="../assets/picture/home6.jpg"  width="100%" height="100%"  >
+  
+          <div class="container">
+            <div class="carousel-caption text-start"> 
+              <h1>Example headline.</h1>
+              <p>Edit</p>
+              <p><a class="btn btn-lg btn-primary" href="#" role="button">GO TO</a></p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </main>
+  </body>
+
 
 <div>
     <button class="btn btn-primary mb-3" (click)="onAddRow()">New</button>&nbsp;
@@ -38,3 +58,6 @@
         <button  (click)="register()">Register</button>
     </div>
 </div>
+<router-outlet></router-outlet>
+<hr class="featurette-divider">
+<footer></footer>
