--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -14,7 +14,7 @@
                 <ul>
                   <li><a href="#">Icon test </a></li>
                   <li><a href="/parent">Gird test </a></li>
-                  <li><a href="/grid">New page</a></li>
+                  <li><a href="/storage">New page</a></li>
                   <li><a href="/page-test">Drop Down 5</a></li>
                 </ul>
               </li>
