--- a/src/app/storage/storage.component.html
+++ b/src/app/storage/storage.component.html
@@ -19,6 +19,10 @@
   </main>
   </body>
 
+  <div>
+    <button (click)= "switchpage()" [hidden] = "dis">Switch Section</button>
+    <button (click)= "switchpage2()" [hidden] = "dis2">Switch Section</button>
+  </div>
 
 <div>
     <button class="btn btn-primary mb-3" (click)="onAddRow()">New</button>&nbsp;
